// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> by default matches with snapshot 1`] = `
<div
  className="date-picker__StyledDatePicker-snpu98-0 fXBBEq"
>
  <div
    className="DayPickerInput"
  >
    <div
      className="k-TextInputWithUnit k-TextInputWithUnit--fullWidth"
    >
      <input
        autoComplete="off"
        className="k-TextInput k-TextInputWithUnit__input"
        disabled={false}
        name="text"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="dd/mm/yyyy"
        type="text"
        value=""
      />
      <span
        className="k-TextInputWithUnit__unit"
      >
        📅
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> with custom input matches with snapshot 1`] = `
<div
  className="date-picker__StyledDatePicker-snpu98-0 fXBBEq"
>
  <div
    className="DayPickerInput"
  >
    <input
      autoComplete="off"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder="dd/mm/yyyy"
      type="text"
      value=""
    />
  </div>
</div>
`;
